<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="zhepan.com.uitest.MainActivity">

    <Button
        android:id="@+id/btN5sm2"
        android:layout_width="134dp"
        android:layout_height="38dp"
        android:layout_marginTop="5dp"
        android:background="@color/colorAccent2"
        android:onClick="runMyUiautomator"
        android:text="@string/reboottest"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.315" />

    <Button
        android:id="@+id/installstandapp"
        android:layout_width="134dp"
        android:layout_height="38dp"
        android:layout_marginTop="5dp"
        android:background="@color/colorAccent2"
        android:onClick="runMyUiautomator"
        android:text="@string/daiding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.776"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.315" />

    <Button
        android:id="@+id/ccbRFtrade"
        android:layout_width="134dp"
        android:layout_height="38dp"
        android:background="@color/colorAccent2"
        android:onClick="runMyUiautomator"
        android:text="@string/instiallapp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.086" />


    <Button
        android:id="@+id/BTNS5RF"
        android:layout_width="134dp"
        android:layout_height="38dp"
        android:background="@color/colorAccent2"
        android:onClick="runMyUiautomator"
        android:text="@string/UItest"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.776"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.086" />

    <Button
        android:id="@+id/BtN5sm"
        android:layout_width="134dp"
        android:layout_height="38dp"
        android:layout_marginTop="5dp"
        android:background="@color/colorAccent2"
        android:onClick="runMyUiautomator"
        android:text="@string/testtool"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.776"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.197" />

    <Button
        android:id="@+id/BtN6sm"
        android:layout_width="134dp"
        android:layout_height="38dp"
        android:layout_marginTop="5dp"
        android:background="@color/colorAccent2"
        android:onClick="runMyUiautomator"
        android:text="@string/DDItest"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.197" />


</androidx.constraintlayout.widget.ConstraintLayout>